--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,3 @@
 PORT=4001
+SECRET=mernWordpairuygulamasiicingizlikelime
+MONG_URI=mongodb+srv://hsabri75:Kalman0667@mern-wordpair.ugkgori.mongodb.net/
