--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,4 +1,5 @@
 {
+  "proxy":"http://localhost:4001",
   "name": "frontend",
   "private": true,
   "version": "0.0.0",
@@ -9,7 +10,8 @@
   },
   "dependencies": {
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.12.1"
   },
   "devDependencies": {
     "@types/react": "^17.0.33",
